CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.19rc5

	- cupsLangGet() could fail on OSX due to a corrupt
	  language preference (STR #78)
	- Added more checks for HTTP request timeouts.
	- The scheduler dropped the first non-alpha character
	  after an open brace when doing attribute substitutions
	  in banner pages (STR #77)
	- The scheduler child might send SIGUSR1 to the parent
	  before the signal handler was installed; this didn't
	  prevent the scheduler from starting but produced an
	  annoying error message (STR #45)


CHANGES IN CUPS V1.1.19rc4

	- The lp command did not accept "-" for printing from
	  the standard input as required by POSIX 1003.1 (STR
	  #59)
	- Added the job-originating-host-name information for
	  the page_log file documentation in the SAM (STR #31)
	- The German web interface templates did not use the
	  right paths for job operations (STR #54)
	- The scheduler would consume all available CPU if
	  started with a pending job in the queue (STR #35)
	- The polling daemon allocated an extra localization
	  buffer but did not free it, causing cups-polld to
	  eventually use all available memory (STR #40)


CHANGES IN CUPS V1.1.19rc3

	- The scheduler could get in an infinite loop cancelling
	  jobs using "cancel -u user dest" (STR #48)
	- The "cancel -u user" command did nothing (it should
	  cancel all jobs on all printers owned by the named
	  user - STR #48)
	- The scheduler would write 0-length job control files
	  (STR #46)
	- Updated the French man pages (translation provided by
	  Gilles QUERRET)
	- The scheduler would delete all printers from
	  printers.conf if a job was active when a HUP signal
	  was handled (STR #47)
	- The cups-polld program would leak memory if it was
	  unable to send browse packets to the loopback
	  interface (STR #40)
	- The scheduler did not put the
	  job-originating-host-name attribute in the job
	  attributes group.
	- The text filter did not default to wrapping text as